# marketing-agent

./: .gitignore  APPLICATION_REVIEW.md  Croatia2  Croatia2.pub  FEATURE_COMPLETENESS_REVIEW.md  README.md  TEST_RESULTS.md  agent-spec.md  cloudbuild-iam.yaml  cloudbuild.yaml  gitleaks-report.json
backend/: .dockerignore  .env.example  .gitignore  .vercelignore  DEPLOYMENT.md  DNS_SETUP.md  Dockerfile  SECURITY.md  pyproject.toml  requirements-full.txt  requirements.txt  vercel.json
backend/app/: index.py  main.py
backend/app/core/: auth.py  config.py  middleware.py
backend/app/db/: __init__.py  collections.py  mongo_repositories.py  mongodb.py  session.py
backend/docs/: MONGODB_ATLAS_SETUP.md
backend/image-analysis-extract/: 01K4QV6VYA0DE36WA8VXTZ30YY.json  01K4QVNYM1QKSK61X7PXR019DF.json  01K5VV1R72C2FAGNS9446DYC05.json  01K5W4XBTDNC6E10NPBYFEH9X5.json  01K6ZPV8G5DY0YZHN8PPRM45JE.json  01K6ZQTXT7KWMYZ113PZHR4N47.json  01K7016GR8YQHZ61BH1GTMVZ8X.json  01K705JPM1AK1QP05SB2SEW7J5.json  01K706GDE5E5EQ991MNAMCQ5W2.json  01K7073G3Q6GGMD612AWZ8FNHK.json  01K846N0G394EPPDFZQWR3BCYV.json
backend/scripts/: README_WORKFLOWS.md  analyze_email_image.py  bulk_analyze_klaviyo_images.py  clear_experiments.py  clear_vector_db.py  demo_email_analysis.py  execute_workflow.py  init_chromadb.py  init_database.py  load_klaviyo_to_vector_db.py  migrate_add_feature_catalog.py  migrate_campaigns_to_cosine.py  migrate_vector_db_location.py  query_experiments.py  run_comfyui_cloud_workflow.py  test_comfyui_cloud.py  test_image_generation.py
backend/tests/: test_email_image_analysis.py  test_health.py  test_ingestion_workflow.py
web/: package-lock.json  (+1 more)
(+118 files in other folders)
